src/main/java/com/example/error/SongError.java
package com.example.error;

public record SongError(String errorCode, String message) {
}
